--- a/app/src/main/res/layout/activity_address_edit.xml
+++ b/app/src/main/res/layout/activity_address_edit.xml
@@ -13,16 +13,20 @@
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/iv_activity_address_edit_return"
-
             android:layout_width="45dp"
             android:layout_height="45dp" />
         <TextView
             android:gravity="center"
             android:layout_marginRight="45dp"
+            android:textSize="@dimen/dp_20"
             android:text="收货地址管理"
             android:layout_width="match_parent"
             android:layout_height="45dp" />
     </LinearLayout>
+    <View
+        android:background="#dddddd"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_4"/>
 
     <ListView
         android:id="@+id/lv_activity_address_edit_list"
@@ -38,14 +42,18 @@
 
         <Button
             android:id="@+id/btn_activity_address_edit_add"
-            android:background="@color/btn_background_save"
+            android:background="@color/background_red"
+            android:textColor="#ffffff"
             android:text="添加新地址"
             android:layout_width="match_parent"
+            android:textSize="@dimen/dp_20"
             android:layout_height="@dimen/dp_45" />
 
         <Button
             android:id="@+id/btn_activity_address_edit_obtain"
-            android:background="@color/btn_background_obtain"
+            android:background="@color/btn_background_save"
+            android:textColor="#ffffff"
+            android:textSize="@dimen/dp_20"
             android:text="一键获取微信地址"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_45" />
