--- a/app/src/main/res/layout/activity_information_edit.xml
+++ b/app/src/main/res/layout/activity_information_edit.xml
@@ -14,35 +14,40 @@ tools:context="com.demo.logindemo.activity.personcenter.impl.InformationEditActi
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <ImageView
+            android:id="@+id/iv_activity_information_return"
             android:layout_width="45dp"
             android:layout_height="45dp" />
+
         <TextView
             android:layout_weight="1"
             android:gravity="center"
-            android:text="资料编辑"
+            android:text="请选择修改内容"
+            android:textSize="@dimen/dp_20"
             android:layout_width="match_parent"
             android:layout_height="45dp" />
         <ImageView
             android:layout_width="45dp"
             android:layout_height="match_parent" />
     </LinearLayout>
-    <TextView
-        android:gravity="center"
-        android:text="请选择修改内容"
+
+    <View
+        android:background="#dddddd"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_35" />
+        android:layout_height="@dimen/dp_5"/>
 
     <!--资料完善-->
     <LinearLayout
         android:id="@+id/ll_activity_information_edit_data"
         android:layout_margin="@dimen/dp_10"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_50">
+        android:layout_height="@dimen/dp_40">
         <TextView
             android:layout_marginLeft="@dimen/dp_10"
             android:layout_weight="1"
             android:gravity="center_vertical"
+            android:textSize="@dimen/dp_15"
             android:text="资料完善"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
@@ -50,62 +55,81 @@ tools:context="com.demo.logindemo.activity.personcenter.impl.InformationEditActi
         <TextView
             android:gravity="center"
             android:textColor="@color/background_red"
+            android:textSize="@dimen/dp_15"
             android:text="送100积分"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
         <ImageView
             android:src="@drawable/ic_chevron_right_black_24dp"
-            android:layout_width="@dimen/dp_50"
-            android:layout_height="match_parent" />
+            android:layout_gravity="center"
+            android:layout_width="@dimen/dp_35"
+            android:layout_height="@dimen/dp_35" />
     </LinearLayout>
+    <View
+        android:background="#dddddd"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_5"/>
 
     <!--收货地址-->
     <LinearLayout
         android:id="@+id/ll_activity_information_edit_address"
         android:layout_margin="@dimen/dp_10"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_50">
+        android:layout_height="@dimen/dp_40">
         <TextView
             android:layout_marginLeft="@dimen/dp_10"
             android:layout_weight="1"
             android:gravity="center_vertical"
+            android:textSize="@dimen/dp_15"
             android:text="收货地址"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
 
         <ImageView
             android:src="@drawable/ic_chevron_right_black_24dp"
-            android:layout_width="@dimen/dp_50"
-            android:layout_height="match_parent" />
+            android:layout_gravity="center"
+            android:layout_width="@dimen/dp_35"
+            android:layout_height="@dimen/dp_35" />
     </LinearLayout>
+    <View
+        android:background="#dddddd"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_5"/>
     <!--修改头像-->
     <LinearLayout
         android:id="@+id/ll_activity_information_edit_pic"
         android:layout_margin="@dimen/dp_10"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_50">
+        android:layout_height="@dimen/dp_40">
         <TextView
             android:layout_marginLeft="@dimen/dp_10"
             android:layout_weight="1"
             android:gravity="center_vertical"
+            android:textSize="@dimen/dp_15"
             android:text="修改头像"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
 
         <ImageView
             android:src="@drawable/ic_chevron_right_black_24dp"
-            android:layout_width="@dimen/dp_50"
-            android:layout_height="match_parent" />
+            android:layout_gravity="center"
+            android:layout_width="@dimen/dp_35"
+            android:layout_height="@dimen/dp_35" />
     </LinearLayout>
+    <View
+        android:background="#dddddd"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_5"/>
     <!--修改密码-->
     <LinearLayout
         android:id="@+id/ll_activity_information_edit_password"
         android:layout_margin="@dimen/dp_10"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_50">
+        android:layout_height="@dimen/dp_40">
         <TextView
             android:layout_marginLeft="@dimen/dp_10"
             android:layout_weight="1"
+            android:textSize="@dimen/dp_15"
             android:gravity="center_vertical"
             android:text="修改密码"
             android:layout_width="wrap_content"
@@ -113,9 +137,14 @@ tools:context="com.demo.logindemo.activity.personcenter.impl.InformationEditActi
 
         <ImageView
             android:src="@drawable/ic_chevron_right_black_24dp"
-            android:layout_width="@dimen/dp_50"
-            android:layout_height="match_parent" />
+            android:layout_gravity="center"
+            android:layout_width="@dimen/dp_35"
+            android:layout_height="@dimen/dp_35" />
     </LinearLayout>
+    <View
+        android:background="#dddddd"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_300"/>
 </LinearLayout>
 
 </ScrollView>
