--- a/app/src/main/res/layout/item_activity_information_edit_change_password.xml
+++ b/app/src/main/res/layout/item_activity_information_edit_change_password.xml
@@ -10,12 +10,14 @@
         <TextView
             android:gravity="center"
             android:layout_weight="1"
+            android:textSize="@dimen/dp_20"
             android:text="修改密码"
             android:layout_width="wrap_content"
             android:layout_height="match_parent" />
         <ImageView
             android:id="@+id/iv_item_activity_information_edit_change_password_close"
             android:src="@drawable/ic_close_black_24dp"
+            android:layout_marginRight="@dimen/dp_10"
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -24,70 +26,77 @@
         android:background="#dddddd"
         android:layout_width="match_parent"
         android:layout_height="3dp"/>
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+
     <LinearLayout
         android:layout_marginLeft="@dimen/dp_10"
+        android:layout_marginTop="@dimen/dp_15"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="@dimen/dp_35" >
         <TextView
             android:layout_gravity="center"
+            android:textSize="@dimen/dp_15"
             android:text="原密码："
-            android:layout_weight="0.2"
+            android:layout_weight="0.25"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
+
         <EditText
+            android:gravity="center|left"
             android:id="@+id/et_item_activity_information_edit_change_password_old"
-            android:hint="请输入原密码"
-            android:layout_weight="0.8"
             android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent"
+            android:layout_marginRight="@dimen/dp_10"
+            android:background="@null"
+            android:layout_weight="0.8"
+            android:hint="请输入原密码"
+            android:textSize="@dimen/dp_15" />
     </LinearLayout>
     <LinearLayout
         android:layout_marginLeft="@dimen/dp_10"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="@dimen/dp_35" >
         <TextView
             android:layout_gravity="center"
+            android:textSize="@dimen/dp_15"
             android:text="新密码："
-            android:layout_weight="0.2"
+            android:layout_weight="0.25"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
         <EditText
             android:id="@+id/et_item_activity_information_edit_change_password_new"
+            android:layout_marginRight="@dimen/dp_10"
+            android:textSize="@dimen/dp_15"
+            android:background="@null"
             android:hint="请输入新密码"
             android:layout_weight="0.8"
             android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+            android:gravity="center|left"
+            android:layout_height="match_parent" />
     </LinearLayout>
     <LinearLayout
         android:layout_marginLeft="@dimen/dp_10"
+        android:layout_marginBottom="@dimen/dp_15"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="@dimen/dp_35" >
         <TextView
             android:layout_gravity="center"
+            android:textSize="@dimen/dp_15"
             android:text="再次输入："
-            android:layout_weight="0.2"
+            android:layout_weight="0.25"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
         <EditText
             android:id="@+id/et_item_activity_information_edit_change_password_confirm"
+            android:layout_marginRight="@dimen/dp_10"
+            android:textSize="@dimen/dp_15"
+            android:background="@null"
             android:hint="请再次输入新密码"
             android:layout_weight="0.8"
             android:layout_width="0dp"
-            android:layout_height="wrap_content" />
+            android:layout_height="@dimen/dp_35" />
     </LinearLayout>
 
     <View
@@ -96,7 +105,9 @@
         android:layout_height="@dimen/dp_3"/>
     <Button
         android:id="@+id/btn_item_activity_information_edit_change_password_confirm"
+        android:textSize="@dimen/dp_15"
         android:text="确认提交"
+        android:layout_marginTop="@dimen/dp_15"
         android:layout_marginRight="@dimen/dp_80"
         android:layout_marginLeft="@dimen/dp_80"
         android:layout_width="match_parent"
