--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,6 +13,8 @@
     <dimen name="dp_9">9dp</dimen>
     <dimen name="dp_10">10dp</dimen>
     <dimen name="dp_12">12dp</dimen>
+    <dimen name="dp_13">13dp</dimen>
+    <dimen name="dp_14">14dp</dimen>
     <dimen name="dp_15">15dp</dimen>
     <dimen name="dp_16">16dp</dimen>
     <dimen name="dp_18">18dp</dimen>
@@ -37,6 +39,7 @@
     <dimen name="dp_80">80dp</dimen>
     <dimen name="dp_85">85dp</dimen>
     <dimen name="dp_90">90dp</dimen>
+    <dimen name="dp_95">95dp</dimen>
     <dimen name="dp_100">100dp</dimen>
     <dimen name="dp_120">120dp</dimen>
     <dimen name="dp_140">140dp</dimen>
@@ -44,6 +47,8 @@
     <dimen name="dp_160">160dp</dimen>
     <dimen name="dp_200">200dp</dimen>
     <dimen name="dp_220">220dp</dimen>
+    <dimen name="dp_225">225dp</dimen>
+    <dimen name="dp_230">230dp</dimen>
     <dimen name="dp_240">240dp</dimen>
     <dimen name="dp_300">300dp</dimen>
     <dimen name="dp_360">360dp</dimen>
