--- a/app/src/main/res/layout/fragment_order_center_wait_payment.xml
+++ b/app/src/main/res/layout/fragment_order_center_wait_payment.xml
@@ -3,12 +3,41 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.demo.logindemo.activity.personcenter.impl.fragment.OrderCenterWaitPaymentFragment">
-
+    <com.handmark.pulltorefresh.library.PullToRefreshListView
+        android:id="@+id/ptrlv_fragment_order_center_wait_payment"
+        android:background="#ffaaff"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
     <TextView
+        android:visibility="gone"
         android:gravity="center"
         android:textSize="@dimen/dp_80"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/order_center_wait_payment" />
+    <!--暂无相关订单时展示-->
+    <LinearLayout
+        android:id="@+id/ll_fragment_order_center_wait_payment"
+        android:visibility="gone"
+        android:background="#ffffff"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <ImageView
+        android:layout_weight="0.5"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:src="@drawable/zanwudingdan" />
+    <TextView
+        android:gravity="top|center_horizontal"
+        android:layout_weight="0.5"
+        android:textSize="@dimen/dp_40"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:text="@string/order_center_all" />
+    </LinearLayout>
+
+
 
 </FrameLayout>
