--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -136,11 +136,10 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent" />
 
-            <EditText
-                android:id="@+id/et_activity_data_birthday"
+            <TextView
+                android:id="@+id/tv_activity_data_birthday"
                 android:layout_gravity="center"
                 android:textSize="@dimen/dp_15"
-                android:background="@null"
                 android:layout_weight="0.8"
                 android:layout_width="0dp"
                 android:layout_height="match_parent" />
