--- a/app/src/main/res/layout/activity_data.xml
+++ b/app/src/main/res/layout/activity_data.xml
@@ -30,7 +30,7 @@
         </LinearLayout>
 
         <View
-            android:background="@color/background"
+            android:background="#dddddd"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_5"/>
 
@@ -44,7 +44,7 @@
             <TextView
                 android:gravity="center|left"
                 android:textSize="@dimen/dp_15"
-                android:text="收货人："
+                android:text="姓名："
                 android:layout_weight="0.2"
                 android:layout_width="0dp"
                 android:layout_height="match_parent" />
@@ -59,6 +59,10 @@
                 android:background="@null"
                 android:layout_height="match_parent" />
         </LinearLayout>
+        <View
+            android:background="#dddddd"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_1"/>
         <LinearLayout
             android:layout_marginLeft="@dimen/dp_25"
             android:layout_marginRight="@dimen/dp_25"
@@ -96,6 +100,10 @@
                     android:layout_height="match_parent" />
             </RadioGroup>
         </LinearLayout>
+        <View
+            android:background="#dddddd"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_1"/>
         <LinearLayout
             android:layout_marginLeft="@dimen/dp_25"
             android:layout_marginRight="@dimen/dp_25"
@@ -120,6 +128,10 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent" />
         </LinearLayout>
+        <View
+            android:background="#dddddd"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_1"/>
         <LinearLayout
             android:layout_marginLeft="@dimen/dp_25"
             android:layout_marginRight="@dimen/dp_25"
@@ -138,12 +150,18 @@
 
             <TextView
                 android:id="@+id/tv_activity_data_birthday"
+                android:gravity="center|left"
+                android:hint="点击输入生日"
                 android:layout_gravity="center"
                 android:textSize="@dimen/dp_15"
                 android:layout_weight="0.8"
                 android:layout_width="0dp"
                 android:layout_height="match_parent" />
         </LinearLayout>
+        <View
+            android:background="#dddddd"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_1"/>
         <LinearLayout
             android:layout_marginLeft="@dimen/dp_25"
             android:layout_marginRight="@dimen/dp_25"
@@ -169,6 +187,10 @@
                 android:background="@null"
                 android:layout_height="match_parent" />
         </LinearLayout>
+        <View
+            android:background="#dddddd"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/dp_1"/>
         <Button
             android:id="@+id/btn_activity_data_confirm"
             android:background="@drawable/shape_rounded_rectangle_btn_enable_down"
