--- a/app/src/main/res/layout/fragment_member_center_grade_list.xml
+++ b/app/src/main/res/layout/fragment_member_center_grade_list.xml
@@ -15,7 +15,7 @@
         android:layout_marginBottom="@dimen/dp_10"
         android:background="@drawable/shape_rounded_rectangle_person_center"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="@dimen/dp_25" />
     <LinearLayout
         android:layout_marginLeft="@dimen/dp_25"
         android:layout_marginRight="@dimen/dp_25"
@@ -27,16 +27,16 @@
             android:layout_marginLeft="@dimen/dp_5"
             android:layout_marginRight="@dimen/dp_5"
             android:gravity="center|left"
-            android:textSize="@dimen/dp_20"
+            android:textSize="@dimen/dp_16"
             android:text="升级条件："
-            android:layout_weight="0.4"
+            android:layout_weight="0.3"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
         <TextView
             android:layout_marginLeft="@dimen/dp_5"
             android:layout_marginRight="@dimen/dp_5"
             android:gravity="center|left"
-            android:textSize="@dimen/dp_20"
+            android:textSize="@dimen/dp_16"
             android:text="进店默认会员"
             android:layout_weight="0.8"
             android:layout_width="0dp"
@@ -53,16 +53,16 @@
             android:layout_marginLeft="@dimen/dp_5"
             android:layout_marginRight="@dimen/dp_5"
             android:gravity="center|left"
-            android:textSize="@dimen/dp_20"
+            android:textSize="@dimen/dp_16"
             android:text="会员特权："
-            android:layout_weight="0.4"
+            android:layout_weight="0.3"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
         <TextView
             android:layout_marginLeft="@dimen/dp_5"
             android:layout_marginRight="@dimen/dp_5"
             android:gravity="center|left"
-            android:textSize="@dimen/dp_20"
+            android:textSize="@dimen/dp_16"
             android:text="无"
             android:layout_weight="0.8"
             android:layout_width="0dp"
@@ -79,20 +79,26 @@
             android:layout_marginLeft="@dimen/dp_5"
             android:layout_marginRight="@dimen/dp_5"
             android:gravity="center|left"
-            android:textSize="@dimen/dp_20"
+            android:textSize="@dimen/dp_16"
             android:text="会员说明："
-            android:layout_weight="0.4"
+            android:layout_weight="0.3"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
         <TextView
             android:layout_marginLeft="@dimen/dp_5"
             android:layout_marginRight="@dimen/dp_5"
             android:gravity="center|left"
-            android:textSize="@dimen/dp_20"
+            android:textSize="@dimen/dp_16"
             android:text="进店是默认成员普通会员，通过升级可以成长为更高级会员。"
             android:layout_weight="0.8"
             android:layout_width="0dp"
             android:layout_height="wrap_content" />
     </LinearLayout>
+    <View
+        android:layout_marginLeft="@dimen/dp_25"
+        android:layout_marginRight="@dimen/dp_25"
+        android:background="#dddddd"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_1"/>
 
 </LinearLayout>
