--- a/app/src/main/res/layout/activity_information_edit.xml
+++ b/app/src/main/res/layout/activity_information_edit.xml
@@ -17,6 +17,7 @@ tools:context="com.demo.logindemo.activity.personcenter.impl.InformationEditActi
 
         <ImageView
             android:id="@+id/iv_activity_information_return"
+            android:src="@drawable/ic_left_return_black_24dp"
             android:layout_width="@dimen/dp_45"
             android:layout_height="@dimen/dp_45" />
 
