--- a/app/src/main/res/layout/activity_integral_shopping_mall.xml
+++ b/app/src/main/res/layout/activity_integral_shopping_mall.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.demo.logindemo.activity.personcenter.impl.IntegralActivity">
+    tools:context="com.demo.logindemo.activity.personcenter.impl.IntegralShoppingMallActivity">
     <TextView
         android:textSize="45dp"
         android:gravity="center"
