--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,7 @@
     <dimen name="dp_8">8dp</dimen>
     <dimen name="dp_9">9dp</dimen>
     <dimen name="dp_10">10dp</dimen>
+    <dimen name="dp_11">11dp</dimen>
     <dimen name="dp_12">12dp</dimen>
     <dimen name="dp_13">13dp</dimen>
     <dimen name="dp_14">14dp</dimen>
@@ -21,6 +22,7 @@
     <dimen name="dp_20">20dp</dimen>
     <dimen name="dp_23">23dp</dimen>
     <dimen name="dp_25">25dp</dimen>
+    <dimen name="dp_27">27dp</dimen>
     <dimen name="dp_30">30dp</dimen>
     <dimen name="dp_31">31dp</dimen>
     <dimen name="dp_33">33dp</dimen>
@@ -48,6 +50,7 @@
     <dimen name="dp_150">150dp</dimen>
     <dimen name="dp_151">151dp</dimen>
     <dimen name="dp_160">160dp</dimen>
+    <dimen name="dp_170">170dp</dimen>
     <dimen name="dp_180">180dp</dimen>
     <dimen name="dp_200">200dp</dimen>
     <dimen name="dp_220">220dp</dimen>
