--- a/app/src/main/res/layout/activity_order_particulars.xml
+++ b/app/src/main/res/layout/activity_order_particulars.xml
@@ -381,6 +381,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent" />
                     <TextView
+                        android:id="@+id/tv_activity_order_particulars_order_number"
                         android:gravity="center"
                         android:text="25485848589558"
                         android:layout_width="wrap_content"
