--- a/app/src/main/res/layout/activity_shopping_cart.xml
+++ b/app/src/main/res/layout/activity_shopping_cart.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.demo.logindemo.activity.personcenter.impl.ShoppingCartActivity">
     <TextView
         android:textSize="45dp"
@@ -11,4 +12,4 @@
         android:text="购物车"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
